# lowrezjam2023

./: CMakeLists.txt  README.md
assets/: blue.aseprite  green.aseprite  projectile_1.aseprite  projectile_green.aseprite  radar_bg.aseprite
assets/shaders/: fragment.fsh  vertex.vsh
source/engine/: foundation.cpp  foundation.h  platform.cpp  platform.h  renderer.cpp  renderer.cpp.PVS-Studio.stacktrace.txt  renderer.h  sound.cpp  sound.h
source/game/: constants.h  game.cpp  game.cpp.PVS-Studio.stacktrace.txt  miner.cpp  miner.h  nasty.cpp  nasty.h  player.cpp  player.h  projectile.cpp  projectile.h  radar.cpp  radar.h
